# universal-render

./: .gitignore  LICENSE  README.md  pyproject.toml
evaluation/: compare_backends.py  results_backend_comparison.csv
examples/: demo_six_scripts.py
notebooks/: language_figures.ipynb  language_gallery.ipynb  universal_render_demo.ipynb
tests/: test_universal_render.py
universal_render/: __init__.py  backend.py  compat.py  diagnostics.py  fonts.py  highlevel.py  layout.py  mpl_support.py  renderer.py  scripts.py
