[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-render"
version = "0.1.2"
description = "Universal complex-script text rendering for Matplotlib and Seaborn using Qt/HarfBuzz shaping."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Mrinal Basak Shuvo", email = "mbs.jr.2009@gmail.com" },
]
keywords = [
    "matplotlib",
    "unicode",
    "complex scripts",
    "text shaping",
    "multilingual",
    "visualization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Text Processing :: Fonts",
]
dependencies = [
    "numpy",
    "matplotlib>=3.5",
    "PySide6>=6.4",
]

[project.urls]
Homepage = "https://github.com/mbs57/universal-render"
Repository = "https://github.com/mbs57/universal-render"
Issues = "https://github.com/mbs57/universal-render/issues"

[tool.setuptools.packages.find]
include = ["universal_render*"]
